# compilers

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: char_reader.c  iterative_translator.c  recursive_translator.c
kaleidoscope/: CMakeLists.txt
kaleidoscope/include/: smolcc.h
kaleidoscope/tests/: CMakeLists.txt  test_gettok.cpp
smolcc/: main.c
